--- a/demo/src/main/resources/application-prod.properties
+++ b/demo/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://aws-0-us-west-2.pooler.supabase.com:6543/postgres?sslmode=require&prepareThreshold=0
-spring.datasource.username=postgres.dyzicukfjhfjvsiggucf
-spring.datasource.password=Prlax08310805
+spring.datasource.username=${DB.username}
+spring.datasource.password=${DB.password}
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
